--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,8 @@
  */
 html {
   box-sizing: border-box;
+  background-color: #d8f0de;
+  background-image: url("https://www.transparenttextures.com/patterns/brilliant.png");
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -14,11 +16,50 @@ html {
  * Global layout stuff
  */
 
-body {
+.profile {
+  padding-top: 120px;
+  display: flex;
+  flex-direction: column;
+  background-color: #d8f0de;
+  background-image: url("https://www.transparenttextures.com/patterns/brilliant.png");
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #545149;
-  background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
+
+#title {
+  margin-left: 1.5em;
+  align-self: flex-end;
+  font-size: 35px;
+}
+
+.rightSide {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-right: 1.5em;
+}
+.arrow {
+  color: red;
+}
+
+nav{
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
+  width: 100%;
+  height: 120px;
+  font-family: 'Bungee', cursive;
+  background-color: #4056a1;
+  color: #FFFFFF;
+ }
+
+
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
