--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,8 +5,6 @@
  */
 html {
   box-sizing: border-box;
-  background-color: #d8f0de;
-  background-image: url("https://www.transparenttextures.com/patterns/brilliant.png");
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -16,6 +14,7 @@ html {
  * Global layout stuff
  */
 
+
 .profile {
   padding-top: 120px;
   display: flex;
@@ -23,11 +22,46 @@ html {
   background-color: #d8f0de;
   background-image: url("https://www.transparenttextures.com/patterns/brilliant.png");
   display: flex;
-  justify-content: center;
   align-items: center;
   color: #545149;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+}
+
+#profileUser {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#name {
+  margin:0;
+}
+
+#handle {
+  margin:0;
+  align-self: center;
+  font-size: 20px;
+  color: #a2a2a2;
+}
+
+#errorContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  width:80% !important;
+  
+}
+
+#errorMessage {
+  color:red !important;
+  display: flex;
+  justify-content: center;
+  
+  font-size: 24px !important;
+  border: solid 3px red !important;
+  margin: 1em;
 }
 
 #title {
@@ -59,8 +93,13 @@ nav{
  }
 
 
+ @media (min-width: 700px){
+  #mainContainer {
+    display: flex;
+    justify-content: space-around;
+  }
 
-
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+  .container {
+    padding-top: 120px;
+  }
+}
