--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -2,7 +2,8 @@
   margin: 1.5em;
   font-family: 'Source Sans Pro', sans-serif;
   width: 100%;
-  
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .tweetContainer {
@@ -11,6 +12,14 @@
   flex-direction: column;
   width: 100%;
   margin-bottom: 1.5em;
+}
+.tweetContainer:hover {
+  border: 3px solid black;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 1.5em;
+  box-shadow: 5px 5px 5px #3e3e3e;
 }
 
 .tweetHeader {
@@ -70,6 +79,12 @@
 }
 
 .reaction{
+  margin: 0;
+  padding-inline: 2px;
+}
+
+.reaction:hover{
+  color:steelblue;
   margin: 0;
   padding-inline: 2px;
 }
