--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -70,6 +70,7 @@ html {
   margin-left: 1.5em;
   align-self: flex-end;
   font-size: 35px;
+  padding-bottom: 0.5em;
 }
 
 .rightSide {
@@ -78,6 +79,7 @@ html {
   flex-direction: column;
   align-items: flex-end;
   margin-right: 1.5em;
+  padding-bottom: 1em;
 }
 .arrow {
   color: red;
